fix button text word wrap in individuals->GRANT in phone

--- a/static/css/media-query.css
+++ b/static/css/media-query.css
@@ -198,7 +198,7 @@
         text-align: center;
     }
     .roadmap .btns{
-        width:40%;
+        width:80%;
         display: block;
         margin: 2em auto;
         text-align: center;
